--- a/date.html
+++ b/date.html
@@ -18,7 +18,7 @@
         <p id=eindtekst>Wow, wat zie je er goed uit!</p>
         <img src="images/popeind.png" alt="pop" id='datemeisje'>
         <img src="images/jongen.png" alt="pop" id='datejongen'>
-        <button> <a href="index.html"> Opnieuw spelen </a></button>
+        <a id=start href="index.html">Opnieuw spelen</a>
     </div>
 
     <script src="js/pop.js"></script>
