--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id='achtergrond'>
         <p id=begintekst>Maak mij mooi voor mijn date!</p>
         <img src="images/start.png" alt="pop" id='popbegin'>
-        <button id=startbutton> <a href="start.html">Start</a></button>
+        <a id=startbutton href="start.html">Start</a>
     </div>
 
     <script src="js/pop.js"></script>
