--- a/start.html
+++ b/start.html
@@ -71,7 +71,7 @@
             <source src="images/wauw.mp3">
         </audio>
 
-        <button id=naardate hidden> <a href="date.html"> Klaar voor date </a></button>
+        <a id=naardate hidden href="date.html">Klaar voor date</a>
     </div>
 
     <footer>
